syntax = "proto3";

package user;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "https://github.com/IPKIN9/user-svc/pkg/protos";

service UserService {
    rpc GetToken(AuthRequest) returns (AuthResponse);
    rpc ValidateToken(ValidateTokenRequest) returns (User);
    rpc GetUser(GetUserRequest) returns (User);
    rpc GetAllUser(GetAllUserRequest) returns (GetAllResponse);
    rpc CreateUser(CreateUserRequest) returns (User);
    rpc UpdateUser(UpdateUserRequest) returns (User);
    rpc DeleteUser(DeleteUserRequest) returns (Empty);
}

message AuthRequest {
    string username = 1;
    string password = 2;
}

message AuthResponse {
    string token = 1;
    google.protobuf.Timestamp expired = 2;
}

message ValidateTokenRequest {
    string token = 1;
}

message GetUserRequest {
    int64 user_id = 1;
}

message GetAllUserRequest {
    google.protobuf.StringValue search = 1;
    int32 limit = 2;
    int32 page = 3;
}

message GetAllResponse {
    repeated User user = 1;
}

message CreateUserRequest {
    string username = 1;
    string password = 2;
    string email = 3;
    string first_name = 4;
    string last_name = 5;
}

message UpdateUserRequest {
    int64 user_id = 1;
    CreateUserRequest user = 2;
}

message DeleteUserRequest {
    int64 user_id = 1;
}
message User {
    int64 user_id = 1;
    string username = 2;
    string password = 3;
    string email = 4;
    string first_name = 5;
    string last_name = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}

message Empty {}
